contrast color fixed

--- a/style.css
+++ b/style.css
@@ -152,15 +152,16 @@ nav a:hover {
 .btn {
     display: inline-block;
     background: gold;
-    color: goldenrod;
+    color: #000;
     padding: 15px 30px;
     margin: 30px 0;
     border-radius: 30px;
     transition: background 0.5s;
+    font-weight: bold;
 }
 
 .btn:hover {
-    background: black;
+    background: #fff;
     text-shadow: 0 0 10px rgb(114 71 21 / 68%), 0 0 10px rgb(114 71 21 / 68%);
 }
 
